GNOME Bugzilla – Bug 791730
Crashes when g_tls_client_connection_openssl_initable_init is called multiple times
Last modified: 2017-12-19 10:31:36 UTC
Created attachment 365690 [details] [review] Only initialize data_index once. g_tls_client_connection_openssl_initable_init will reset the global data_index variable. If it is called multiple times it can cause a crash in retrieve_certificate where it uses the index to retrieve stored data. The attached patch makes it only initialize data_index once.
The patch looks good to me. Can you please attach instead a git format-patch so we give you the proper credit for it?
Created attachment 365738 [details] [review] Git format patch