Only initialize data_index once

Add a check so that g_tls_client_connection_openssl_initable_init only
initialize the global data_index variable on the first call. If it is
initialized multiple times it can cause an error in retrieve_certificate
where it uses the index to retrieve stored data.

https://bugzilla.gnome.org/show_bug.cgi?id=791730